--- a/src/container/car.hbs
+++ b/src/container/car.hbs
@@ -1,10 +1,10 @@
 <div class="p-2">
-    <h1> {{make}} {{model}}</h1>
+    <h1 class="text-center"> {{make}} {{model}}</h1>
     <hr>
     <div>
         <em>{{make}} {{model}}</em> - {{year}} <strong> Color: {{color}}
     </div></strong>
-    </br>
+
     <hr>
     <section>
         <div class="alert alert-primary" role="alert">
@@ -37,7 +37,7 @@
                                     {{/if}}
                                 </div>
                                 {{/with}}
-                                </br>
+
                             </div>
                             <div class="alert alert-warning" role="alert">
                                 <span class="badge text-bg-primary">
@@ -180,7 +180,7 @@
             </div>
         </div>
     </section>
-    </br>
+
     <hr>
     <section>
         <div class="alert alert-secondary" role="alert">
