--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,13 +1,22 @@
-{{!--
-Це код container файлу для index сторінки,
-в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
---}}
-
-<h1>Hello world</h1>
-
-{{!--
-Цей код містить лише те, що буде виводитись в
-
 <body>
-    Адже наш layout/default.hbs має вже структуру HTML
-    --}}
+    <div class="ps-2">
+        {{#with header}}
+        <h1>{{title}}</h1>
+        <div>
+            <span class="fs-4">
+                {{description}}
+            </span>
+        </div>
+        {{/with}}
+
+    </div>
+    <div>
+        <ul>
+            {{#each page}}
+            <div class="mt-2">
+                <a href="{{href}}" target="_blank" class="btn btn-primary">{{text}}</a>
+            </div>
+            {{/each}}
+        </ul>
+    </div>
+</body>
