--- a/src/container/js.hbs
+++ b/src/container/js.hbs
@@ -2,16 +2,16 @@
     <div>
         <h1>{{name}}</h1>
     </div>
-    <div><span>{{description}}</span></div></br>
-    <hr>
+    <div><span>{{description}}</span></div>
+    <hr class="mt-3 mb-3">
     <h2>History</h2>
     <div>
         {{#with history}}
         <div>Year: {{year}}</div> Founder: <em>{{founder}}</em>
         {{/with}}
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
     <h3>Types:</h3>
     <div>
         <ul>
@@ -22,10 +22,10 @@
             {{/each}}
         </ul>
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
     <div>
-        <h3>Syntax:</h3>
+        <h3 class="mb-4">Syntax:</h3>
         <ul>
             {{#with syntax}}
             <div>
@@ -36,15 +36,15 @@
                     {{>button2 data=this}}
                     {{/each}}
                 </li>
-                </br>
-                <li>
+
+                <li class="pt-2">
                     <h4>Conditionals:</h4>
 
-                    {{#each fconditionals}}
+                    {{#each conditionals}}
                     {{>button2 data=this}}
                     {{/each}}
                 </li>
-                </br>
+
                 <li>
                     <h4>Functions:</h4>
 
@@ -52,7 +52,7 @@
                     {{>button2 data=this}}
                     {{/each}}
                 </li>
-                </br>
+
                 <li>
                     <h4>Loops:</h4>
 
@@ -60,7 +60,7 @@
                     {{>button2 data=this}}
                     {{/each}}
                 </li>
-                </br>
+
 
                 <li>
                     <h4>Classes:</h4>
@@ -69,13 +69,13 @@
                     {{>button2 data=this}}
                     {{/each}}
                 </li>
-                </br>
+
             </div>
             {{/with}}
         </ul>
     </div>
 
-    <hr>
+    <hr class="mt-3 mb-3">
     <div>
         <h3>Features:</h3>
         <div>
@@ -84,8 +84,8 @@
             {{/each}}
         </div>
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
     <div>
         <h3>Libraries:</h3>
         <div>
@@ -94,8 +94,8 @@
             {{/each}}
         </div>
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
     <div>
         <h3>Tools:</h3>
         <div>
@@ -104,18 +104,17 @@
             {{/each}}
         </div>
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
     <div>
         <h3>Community:</h3>
         <div>
             <ul>
                 {{#each community}}
-                <li>
+                <li class="m-3">
                     <em>{{name}}</em>
                     {{>button data=type}}
-                    </br>
-                    </br>
+
                 </li>
 
 
@@ -124,6 +123,6 @@
             </ul>
         </div>
     </div>
-    </br>
-    <hr>
+
+    <hr class="mt-3 mb-3">
 </div>
