--- a/src/container/program.hbs
+++ b/src/container/program.hbs
@@ -2,41 +2,45 @@
     {{#with program}}
     <main>
         {{#with excursion}}
-        <div>
+        <div class="text-center">
             <h1>{{name}}</h1>
         </div>
         <section>
 
-            <div>
+            <div class="text-center">
                 {{#with location}}
                 <address>location: {{city}}, {{country}}</address>
                 {{/with}}
 
             </div>
-            </br>
-            <div>
+
+            <div class="text-center">
                 Date: {{date}}
             </div>
-            <hr>
-            <div>
-                {{#each program}}
-                {{/each}}
-            </div>
+
+
         </section>
+        <hr class="mt-3 mb-3">
         <section>
-            <div>
-                <h2>Program:</h2>
+            <div class="text-center">
+                <h2>Program</h2>
             </div>
             <div>
-                <ul>
-                    {{#each program}}
-                    </br>
-                    <li>
-                        <hr>
-                        <div>
-                            <em>{{name}}</em> - {{type}} (duration: {{duration}}h)
+
+                <div class="row">
+
+                    <div class="col-3"></div>
+                    <div class="card col-6 text-center">
+                        {{#each program}}
+
+
+
+
+                        <div class="card-header">
+                            <em class="fs-3">{{name}}</em> - {{type}} (duration: {{duration}}h)
                         </div>
-                        <div>
+                        <div class="card-body">
+
 
                             <h3>Details:</h3>
                             {{#with details}}
@@ -44,32 +48,33 @@
                             <div><em>Museum: {{name}}</em></div>
                             <div>
 
-                                <address> Location: {{location.address}}, {{location.city}}, {{location.country}}
+                                <address> Location: {{location.address}}, {{location.city}},
+                                    {{location.country}}
                                 </address>
                             </div>
                             <div>
                                 <h4>Exhibits:</h4>
-                                <ul>
-                                    {{#each exhibits }}
 
-                                    <li>
-                                        <div><em>{{name}}</em> </div></br>
-                                        <div>
-                                            {{artist}}
-                                        </div>
-                                        <p>{{description}}</p>
-                                        <div>
-                                            {{#if audio_guide}}
-                                            <strong>audio guide:</strong></br> <audio controls loop
-                                                src="https://www.w3schools.com/tags/horse.ogg"></audio>
-                                            {{/if}}
-                                        </div>
+                                {{#each exhibits }}
 
 
-                                    </li>
-                                    {{/each}}
+                                <div><em>{{name}}</em> </div>
+                                <div>
+                                    {{artist}}
+                                </div>
+                                <p>{{description}}</p>
+                                <div>
+                                    {{#if audio_guide}}
+                                    <strong>audio guide:</strong></br> <audio controls loop
+                                        src="https://www.w3schools.com/tags/horse.ogg"></audio>
+                                    {{/if}}
+                                </div>
 
-                                </ul>
+
+
+                                {{/each}}
+
+
 
                             </div>
 
@@ -77,10 +82,12 @@
 
 
                             {{#with venue}}
+
                             <div><em>Venue: {{name}}</em></div>
                             <div>
 
-                                <address> Location: {{location.address}}, {{location.city}}, {{location.country}}
+                                <address> Location: {{location.address}}, {{location.city}},
+                                    {{location.country}}
                                 </address>
                             </div>
 
@@ -89,34 +96,34 @@
                             <div>
                                 {{#if performers}}
                                 <h4>Performers:</h4>
-                                <ul>
-                                    {{#each performers}}
 
-                                    <li>
-                                        <div><em>{{name}}</em> /<strong> {{type}}</strong>
-                                        </div></br>
-                                    </li>
+                                {{#each performers}}
 
-                                    {{/each}}
-                                </ul>
+
+                                <div><em>{{name}}</em> /<strong> {{type}}</strong>
+                                </div>
+
+
+                                {{/each}}
+
                                 {{/if}}
                             </div>
                             <h4>Guide:</h4>
                             <div>{{#with guide}}
-                                <em>{{name}}</em> </br>
-                                language:{{language}}</br>
-                                <strong>
-                                    rating:{{rating}}</strong>
+                                <em>{{name}}</em>
+                                language:{{language}}
+                                <div> <strong>
+                                        rating:{{rating}}</strong></div>
                                 {{/with}}
                             </div>
                             {{/with}}
                         </div>
-                    </li>
-                    {{/each}}
 
-                </ul>
+                        {{/each}}
+                    </div>
 
-            </div>
+
+                </div>
         </section>
 
         {{/with}}
