--- a/src/container/web.hbs
+++ b/src/container/web.hbs
@@ -1,83 +1,92 @@
 <div class="p-2">
     <main>
         {{#with web}}
-        <h1>languages:</h1>
-        <div>
+        <h1 class="text-center">Languages</h1>
+        <div class="row">
             <ul>
-                {{#each languages}}
-                <li>
-                    <h2>{{name}}</h2>
-                    <div><strong>Version: {{version}}</strong></div> </br>
-                    <p>{{description}}</p>
-                    <div>{{#if elements}}
-                        <h3>Elements: </h3>
-                        <ul>
-                            {{#each elements}}
-                            <li>
-                                <em>{{name}}</em> </br>
-                                <p>{{description}}</p>
-                                <h4>Attribute:</h4>
-                                <ul>
-                                    {{#each attributes}}
-                                    <li>
-                                        <div><em>{{name}}</em></div>
-                                        <p>{{description}}</p> </br>
-                                    </li>
-                                    {{/each}}
-                                </ul>
-                            </li>
-                            {{/each}}
-                        </ul>
+                <div class="row ">
+                    {{#each languages}}
 
-                        {{/if}}
+                    <div class="card col-3 ms-5 me-5 mt-2">
+
+                        <div class="card-header">
+                            <h2>{{name}}</h2>
+                        </div>
+                        <div class="pt-2 pb-3"><strong>Version: {{version}}</strong></div>
+                        <p>{{description}}</p>
+                        <div>{{#if elements}}
+                            <h3>Elements: </h3>
+                            <ul>
+                                {{#each elements}}
+                                <li>
+                                    <strong><em>{{name}}</em></strong>
+                                    <p>{{description}}</p>
+                                    <h4>Attribute:</h4>
+                                    <ul>
+                                        {{#each attributes}}
+                                        <li>
+                                            <div><em>{{name}}</em></div>
+                                            <p>{{description}}</p>
+                                        </li>
+                                        {{/each}}
+                                    </ul>
+                                </li>
+                                {{/each}}
+                            </ul>
+
+                            {{/if}}
+                        </div>
+                        <div>{{#if properties}}
+                            <h3>Properties: </h3>
+                            <ul>
+                                {{#each properties}}
+                                <li>
+                                    <strong><em>{{name}}</em></strong>
+                                    <p>{{description}}</p>
+                                    <h4>Values:</h4>
+                                    <ul>
+                                        {{#each values}}
+                                        <li>
+                                            <div><em>{{value}}</em></div>
+                                            <p>{{description}}</p>
+                                        </li>
+                                        {{/each}}
+                                    </ul>
+                                </li>
+                                {{/each}}
+                            </ul>
+
+                            {{/if}}
+                        </div>
+                        <div>{{#if functions}}
+                            <h3>Functions: </h3>
+                            <ul>
+                                {{#each functions}}
+                                <li>
+                                    <strong><em>{{name}}</em></strong>
+                                    <p>{{description}}</p>
+                                    <h4>Parameters:</h4>
+                                    <ul>
+                                        {{#each parameters}}
+                                        <li>
+                                            <div><em>{{name}}</em> / Type: {{type}}</div>
+                                            <p>{{description}}</p>
+                                        </li>
+                                        {{/each}}
+                                    </ul>
+                                </li>
+                                {{/each}}
+                            </ul>
+
+                            {{/if}}
+                        </div>
+
+
                     </div>
-                    <div>{{#if properties}}
-                        <h3>Properties: </h3>
-                        <ul>
-                            {{#each properties}}
-                            <li>
-                                <em>{{name}}</em> </br>
-                                <p>{{description}}</p>
-                                <h4>Values:</h4>
-                                <ul>
-                                    {{#each values}}
-                                    <li>
-                                        <div><em>{{value}}</em></div>
-                                        <p>{{description}}</p> </br>
-                                    </li>
-                                    {{/each}}
-                                </ul>
-                            </li>
-                            {{/each}}
-                        </ul>
 
-                        {{/if}}
-                    </div>
-                    <div>{{#if functions}}
-                        <h3>Functions: </h3>
-                        <ul>
-                            {{#each functions}}
-                            <li>
-                                <em>{{name}}</em> </br>
-                                <p>{{description}}</p>
-                                <h4>Parameters:</h4>
-                                <ul>
-                                    {{#each parameters}}
-                                    <li>
-                                        <div><em>{{name}}</em> / Type: {{type}}</div>
-                                        <p>{{description}}</p> </br>
-                                    </li>
-                                    {{/each}}
-                                </ul>
-                            </li>
-                            {{/each}}
-                        </ul>
+                    {{/each}}
+                </div>
 
-                        {{/if}}
-                    </div>
-
-                </li>
-                {{/each}}
             </ul>
         </div>
         {{/with}}
