--- a/src/container/work.hbs
+++ b/src/container/work.hbs
@@ -14,9 +14,9 @@
                 <ul>
                     {{#each works}}
                     <li>
-                        <div>{{position}}</div>
+                        <div class="pb-2">{{position}}</div>
 
-                        <br>
+
 
                         <div>
                             {{duration.from}}
@@ -27,27 +27,26 @@
                             {{/if}}
                         </div>
 
-                        <br>
 
-                        <div>{{> link text=company.name href=company.url blank=true noLine=true}}</div>
-                        <br><br>
+                        <div class="pt-3">{{> link text=company.name href=company.url blank=true noLine=true}}</div>
 
-                        <div><strong>Projects ({{projectAmount}})</strong></div>
-                        <br>
+
+                        <div class="pt-4 pb-3"><strong>Projects ({{projectAmount}})</strong></div>
+
                         <ul>
                             {{#each projects}}
                             <li>
-                                <div>{{> link text=name href=url blank=true noLine=true}}</div>
-                                <br>
+                                <div class="pb-3">{{> link text=name href=url blank=true noLine=true}}</div>
+
                                 <div>
                                     <p>
                                         {{about}}
                                     </p>
                                 </div>
-                                <br>
-                                <div>
-                                    <div><em>"Project stacks" ({{stackAmount}})</em></div>
-                                    <br>
+
+                                <div class="pt-3">
+                                    <div class="mb-3"><em>"Project stacks" ({{stackAmount}})</em></div>
+
                                     <ul>
                                         {{#each stacks}}
                                         <li>
@@ -56,10 +55,10 @@
                                         {{/each}}
                                     </ul>
                                 </div>
-                                <br>
-                                <div>
-                                    <div><em>"Project awards"</em></div>
-                                    <br>
+
+                                <div class="pt-3">
+                                    <div class="mb-3"><em>" Project awards"</em></div>
+
                                     <ul>
                                         {{#each awards}}
                                         <li>
